--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.3.0",
     "mongoose": "^5.6.10",
+    "nodemailer": "^6.3.1",
+    "nodemailer-express-handlebars": "^3.1.0",
     "nodemon": "^1.19.1"
   },
   "engines": {
